--- a/src/pages/css/Home.module.css
+++ b/src/pages/css/Home.module.css
@@ -16,7 +16,7 @@
 }
 
 
-@media screen  and (max-width: 1400px){
+@media screen  and (max-width: 1450px){
     .header {
         font-size: 3rem;
       }
@@ -25,11 +25,13 @@
     .header {
         font-size: 2rem;
         margin: 3rem;
+        padding: 3rem;
       }
 }
 @media screen  and (max-width: 600px){
     .header {
         font-size: 1rem;
         margin: 2rem;
+        padding: 3rem;
       }
 }
